[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "nrdp-daemon"
description = "Nagios Remote Data Processor Daemon"
readme = "README.txt"
requires-python = ">=3.7"
license_file = "LICENSE.txt"
authors = [
    { name = "Hoplite Industries, Inc." },
]
maintainers = [
    { name = "Shawn Michael", email="smichael@hopliteindustries.com" },
]
keywords = [
    "nagios",
    "nrdp",
    "passive",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Monitoring",
]
dynamic = ["version", "dependencies"]

[project.scripts]
nrdpd = "libnrdpd.main:start"

[project.urls]
Homepage = "https://github.com/HopliteInd/nrdpd-daemon"

[publish.index]


[publish.index.repos.main]
url = "https://upload.pypi.org/legacy/"


[tool.hatch.version]
path = "libnrdpd/__about__.py"

[tool.hatch.build.targets.wheel]
include = [
  "libnrdpd/*.py",
]
exclude = []

[tool.hatch.build.targets.sdist]
include = [
  "libnrdpd/*.py",
  "*.txt",
  "*.ini",
]
exclude = []



[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements-3rdparty.txt", "requirements-hoplite.txt"]


[tool.black]
line_length = 79


[tool.ruff]
# Same as Black.
line-length = 79
indent-width = 4

# Assume Python 3.11
target-version = "py311"

[tool.ruff.lint]
select = [
    "A",
    "ANN",
    "ARG",
    "B",
    "BLE",
    "C",
    "C4",
    "C90",
    "D",
    "DTZ",
    "E",
    "ERA",
    "EXE",
    "F",
    "FA",
    "FBT",
    "FIX",
    "FURB",
    "FLY",
    "G",
    "I",
    "ICN",
    "INP",
    "ISC",
    "LOG",
    "N",
    "PERF",
    "PGH",
    "PIE",
    "PL",
    "PTH",
    #"PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "SLOT",
    "T10",
    "TC",
    "TD",
    #"TRY",
    "UP",
    "W",
    "YTT",
    ]
ignore = ["I001", "D107"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.uv]
native-tls = true

[tool.uv.pip]
index-url = "https://pypi.int.hopliteindustries.com/hoplite/prod/+simple/"


